fail_crate/tests/unknown_visibility.rs
use inew::New;

#[derive(New)]
#[new(pub(what))]
struct A;

fn main() {}
